完成番茄闹钟小程序1.0

--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -4,9 +4,11 @@
   display: flex;
   flex-direction: column;
   position: relative;
+
 }
 
 .tomato-wrapper {
+  overflow: hidden;
   flex: 1;
   margin-top: 66rpx;
   padding: 0 28rpx;
